--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "debug": "^4.3.1",
     "deep-equal": "^1.0.1",
     "lodash": "^4.17.20",
-    "socket.io-client": "^3.0.3"
+    "socket.io-client": "^3 || ^4"
   }
 }
