--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -16,17 +16,17 @@ jobs:
 
     strategy:
       matrix:
+        socketio: [v3, v4]
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ matrix.node-version }} + Socket.IO ${{ matrix.socket.io }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-#        cache: 'npm'
     - run: |
         cd test-app 
-        yarn add socket.io@3
+        yarn add socket.io@${{ matrix.socket.io }}
         yarn test
