--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/ptejada/artillery-engine-socketio-v3#readme",
   "dependencies": {
-    "artillery": "~1.6.1",
+    "artillery": "^1.6.1",
     "async": "^1.5.2",
     "debug": "^4.3.1",
     "deep-equal": "^1.0.1",
