--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^4.3.1",
     "deep-equal": "^1.0.1",
     "lodash": "^4.17.20",
-    "socket.io-client": "^3 || ^4"
+    "socket.io-client": "^3 || ^4",
+    "socket.io-msgpack-parser": "^3.0.1"
   }
 }
