--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.2",
   "description": "Socket.IO v3 engine for Artillery",
   "main": "index.js",
+  "engines": {
+    "node": ">= 14"
+  },
   "files": [
     "index.js",
     "cookies.js"
