--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -16,14 +16,14 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 19.x]
+        node-version: [14, 16, 18, 19]
         artillery: [v1.6, v1]
         socketio: [v3, v4]
 
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
     - name: Run Test with Socket.IO ${{ matrix.socketio }} + Artillery ${{ matrix.artillery }}
